[project]
name = "portfolio-llm-chatbot"
version = "0.0.1"
description = "llm chat bot for my website"
authors = [
    {name = "Kamesh",email = "11kameshwaran@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "langchain (>=0.3.27,<0.4.0)",
    "chromadb (>=1.0.21,<2.0.0)",
    "sentence-transformers (>=5.1.0,<6.0.0)",
    "groq (>=0.31.1,<0.32.0)",
    "langchain-community (>=0.3.29,<0.4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
